Falta el test de window cronometro

--- a/DuperClock/Rakefile
+++ b/DuperClock/Rakefile
@@ -19,3 +19,8 @@ desc 'Ejecutar ventana'
 task :ventana do 
 	DuperClock::Window.new.main_loop
 end
+
+desc 'Ejecutar ventana'
+task :cronometro do 
+	DuperClock::WindowCronometro.new.main_loop
+end
